# hwhkit-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  Makefile  README.md  SECURITY.md  TESTING.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  semver.yml
crates/cargo-hwhkit/: Cargo.toml  README.md
crates/cargo-hwhkit/src/: dev.rs  main.rs
crates/hwhkit/: Cargo.toml  README.md
crates/hwhkit-buildinfo/: Cargo.toml  README.md  build.rs
crates/hwhkit-buildinfo/src/: lib.rs
crates/hwhkit-config/: Cargo.toml  README.md
crates/hwhkit-config/src/: lib.rs
crates/hwhkit-config/tests/: proptest_merge.rs
crates/hwhkit-core/: Cargo.toml  README.md
crates/hwhkit-core/benches/: app_context.rs
crates/hwhkit-core/src/: api_response.rs  error.rs  error_response.rs  health.rs  jwt.rs  lib.rs  mesh.rs  module.rs  resource.rs  shutdown.rs  tenant.rs
crates/hwhkit-core/tests/: api_contract.rs  proptest_dyn_storage.rs
crates/hwhkit-integration-llm/: Cargo.toml  README.md
crates/hwhkit-integration-llm/src/: config.rs  error.rs  handle.rs  lib.rs  provider.rs  types.rs
crates/hwhkit-integration-llm/src/backend/: anthropic.rs  mod.rs  openai_compat.rs
crates/hwhkit-integration-llm/tests/: backends.rs
crates/hwhkit-integration-mongodb/: Cargo.toml  README.md
crates/hwhkit-integration-mongodb/src/: lib.rs
crates/hwhkit-integration-mongodb/tests/: live.rs
crates/hwhkit-integration-nats/: Cargo.toml  README.md
crates/hwhkit-integration-nats/src/: lib.rs
crates/hwhkit-integration-nats/tests/: live.rs
crates/hwhkit-integration-neo4j/: Cargo.toml  README.md
crates/hwhkit-integration-neo4j/src/: lib.rs
crates/hwhkit-integration-neo4j/tests/: live.rs
crates/hwhkit-integration-oss/: Cargo.toml  README.md
crates/hwhkit-integration-oss/src/: lib.rs
crates/hwhkit-integration-oss/tests/: live.rs
crates/hwhkit-integration-postgres/: Cargo.toml  README.md
crates/hwhkit-integration-postgres/src/: lib.rs
crates/hwhkit-integration-postgres/tests/: live.rs
crates/hwhkit-integration-qdrant/: Cargo.toml  README.md
crates/hwhkit-integration-qdrant/src/: lib.rs
crates/hwhkit-integration-qdrant/tests/: live.rs
crates/hwhkit-integration-redis/: Cargo.toml  README.md
crates/hwhkit-integration-redis/src/: lib.rs
crates/hwhkit-integration-redis/tests/: live.rs
crates/hwhkit-integration-s3/: Cargo.toml  README.md
crates/hwhkit-integration-s3/src/: lib.rs
crates/hwhkit-integration-s3/tests/: live.rs
crates/hwhkit-macros/: Cargo.toml
crates/hwhkit-macros/src/: lib.rs
crates/hwhkit-observability/: Cargo.toml  README.md
crates/hwhkit-observability/src/: lib.rs  redis_instrument.rs  reqwest_instrument.rs  sqlx_instrument.rs
crates/hwhkit-scheduler/: Cargo.toml  README.md
crates/hwhkit-scheduler/benches/: cron_eval.rs
crates/hwhkit-scheduler/src/: cron.rs  lib.rs  storage.rs
crates/hwhkit-scheduler/tests/: proptest_cron.rs
crates/hwhkit-transport/: Cargo.toml
crates/hwhkit-transport/src/: lib.rs  mesh.rs  protocol.rs
crates/hwhkit/benches/: metrics_middleware.rs  middleware_stack.rs
crates/hwhkit/examples/: api-server.rs  full-server.rs  runtime-module-mesh.rs  runtime-nats-websocket.rs
crates/hwhkit/examples/runtime-module-config/: default.toml  dev.toml
crates/hwhkit/examples/runtime-nats-config/: default.toml  dev.toml
crates/hwhkit/src/: bootstrap.rs  builder.rs  config.rs  error.rs  lib.rs  prelude.rs  runtime_v3.rs  server.rs  templates.rs
crates/hwhkit/src/middleware/: cors.rs  jwt.rs  logging.rs  mod.rs  static_files.rs
crates/hwhkit/src/production/: circuit_breaker.rs  health.rs  idempotency.rs  metrics.rs  middleware.rs  mod.rs  process_metrics.rs  rate_limit.rs  request_id.rs  server.rs  shutdown.rs  tenant.rs  version.rs
crates/hwhkit/tests/: e2e_no_self_terminate.rs  e2e_serve.rs  facade_compat.rs  proptest_idempotency.rs  proptest_tenant_id.rs  runtime_examples.rs
doc/: 2026-02-09-01-architecture-roadmap-v2.md  2026-02-09-02-golden-path-extreme-performance.md  2026-02-09-03-transport-and-protocol-mesh.md  2026-02-09-04-structure-options.md  2026-02-09-05-execution-plan-confirmed.md  2026-02-09-06-execution-progress.md  2026-04-16-v3-runtime-architecture.md  2026-05-14-01-integration-resilience-audit.md  TODO_AI_AGENT_PLATFORM_PLAN.md  TODO_TESTING_AND_QUALITY_PLAN.md  TODO_V3_EXECUTION_PLAN.md
doc/guides/: QUICK_START.md  RELEASE_CHECKLIST.md
examples/: README.md
examples/full-stack/: Cargo.toml  README.md
examples/full-stack/src/: main.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: main.rs
examples/postgres-rest/: Cargo.toml  README.md
examples/postgres-rest/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_toml.rs  cron_parse.rs  jwt_decode.rs  path_param_extract.rs
src/: bootstrap_v2.rs
templates/api-grpc/: README.md
templates/minimal-api/: README.md
templates/realtime-event/: README.md
