[workspace]
members = [
    "crates/hwhkit",
    "crates/hwhkit-config",
    "crates/hwhkit-core",
    "crates/hwhkit-observability",
    "crates/hwhkit-transport",
    "crates/hwhkit-macros",
    "crates/hwhkit-integration-postgres",
    "crates/hwhkit-integration-redis",
    "crates/hwhkit-integration-mongodb",
    "crates/hwhkit-integration-nats",
    "crates/hwhkit-integration-qdrant",
    "crates/hwhkit-integration-neo4j",
    "crates/cargo-hwhkit",
]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha.2"
edition = "2021"
authors = ["louishwh"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/louishwh/hwhkit-rs"
homepage = "https://louishwh.tech"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
