[package]
name = "cargo-hwhkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "cargo hwhkit init / migrate / dev 命令"
keywords = ["cargo-subcommand","cli","scaffold","migration"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"

[[bin]]
name = "cargo-hwhkit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
toml.workspace = true
# Used to forward SIGINT to the spawned `docker compose up` child so
# Ctrl+C cleanly tears the container stack down. (N12.)
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "signal"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
# Build with every feature flag so the rendered docs include the
# JWT / multi-tenant / integration / scheduler surfaces, not just the
# default subset. `--cfg docsrs` lets us gate items like
# `#[doc(cfg(feature = "..."))]` in source.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
