[package]
name = "hwhkit-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit 配置加载、分层合并与校验模块"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
