[package]
name = "hwhkit-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit 配置加载、分层合并与校验模块"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true }
proptest = "1"
