[package]
name = "hwhkit-integration-nats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit NATS integration"
keywords = ["nats", "messaging", "jetstream", "pubsub", "async"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
async-trait.workspace = true
hwhkit-config = { version = "0.6.0-alpha.3", path = "../hwhkit-config" }
hwhkit-core = { version = "0.6.0-alpha.3", path = "../hwhkit-core" }
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
tracing.workspace = true
async-nats = "0.38"

[dev-dependencies]
# Live integration tests gated by `#[ignore]`. Run with
# `cargo test -p hwhkit-integration-nats -- --ignored`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["nats"] }
futures = { workspace = true }

[package.metadata.docs.rs]
# Build with every feature flag so the rendered docs include the
# JWT / multi-tenant / integration / scheduler surfaces, not just the
# default subset. `--cfg docsrs` lets us gate items like
# `#[doc(cfg(feature = "..."))]` in source.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
