[package]
name = "hwhkit-integration-neo4j"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit Neo4j integration"
keywords = ["neo4j", "graph", "database", "cypher", "async"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
async-trait.workspace = true
hwhkit-config = { version = "0.6.0-alpha.3", path = "../hwhkit-config" }
hwhkit-core = { version = "0.6.0-alpha.3", path = "../hwhkit-core" }
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
neo4rs = "0.8"

[dev-dependencies]
# Live integration tests gated by `#[ignore]`. Run with
# `cargo test -p hwhkit-integration-neo4j -- --ignored`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["neo4j"] }

[package.metadata.docs.rs]
# Build with every feature flag so the rendered docs include the
# JWT / multi-tenant / integration / scheduler surfaces, not just the
# default subset. `--cfg docsrs` lets us gate items like
# `#[doc(cfg(feature = "..."))]` in source.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
