[package]
name = "hwhkit-integration-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit PostgreSQL integration"

[dependencies]
async-trait.workspace = true
hwhkit-config = { version = "0.6.0-alpha.1", path = "../hwhkit-config" }
hwhkit-core = { version = "0.6.0-alpha.1", path = "../hwhkit-core" }
serde.workspace = true
sqlx = { workspace = true }
tracing.workspace = true
