[package]
name = "hwhkit-integration-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit Redis/Dragonfly integration"
keywords = ["redis", "cache", "database", "async"]
categories = ["caching", "database"]
readme = "README.md"

[dependencies]
async-trait.workspace = true
hwhkit-config = { version = "0.6.0-alpha.1", path = "../hwhkit-config" }
hwhkit-core = { version = "0.6.0-alpha.1", path = "../hwhkit-core" }
serde.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
# Live integration tests gated by `#[ignore]`. Run with
# `cargo test -p hwhkit-integration-redis -- --ignored`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["redis"] }

[package.metadata.docs.rs]
# Build with every feature flag so the rendered docs include the
# JWT / multi-tenant / integration / scheduler surfaces, not just the
# default subset. `--cfg docsrs` lets us gate items like
# `#[doc(cfg(feature = "..."))]` in source.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
