[package]
name = "hwhkit-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HwhKit 日志、链路追踪与指标模块"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
